tests/cases/errors/runtime_negate_non_number.lox
// expect runtime error: Operand must be a number
-"oops"
